EXTRA_chfpp_DATA = Balanced.pm \
                   chfixpp.pm \
                   ChF.pm \
                   ddeclpp.pm \
                   dselectpp.pm \
                   dtermpp.pm \
                   fort72 \
                   lboundpp.pm \
                   makeallcapspp.pm \
                   Makefile.am \
                   multidopp.pm \
                   ncomppp.pm \
                   stripcompp.pm \
                   stripsharpmain.pl \
                   stripsharp.pm \
                   subrout.pm \
                   uber.pl \
                   uboundpp.pm

EXTRA_chfppdir = $(pkgdatadir)/chfpp

EXTRA_DIST = *.pl *.pm fort72
